# waka-discord-status

./: Cargo.toml  README.md  makefile
migrations/2024-05-13-005956_oauth_tokens/: down.sql  up.sql
src/: db.rs  err.rs  main.rs  main_loop.rs  util.rs
src/util/: mod.rs
