[package]
name = "discord-wakatime-update"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
axum = "0.7.5"
axum-core = "0.4.3"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version="2.1.6", features=["postgres", "r2d2", "serde_json", "chrono"] }
diesel-async = { version="0.4.1", features=["postgres", "r2d2", "deadpool", "tokio-postgres", "tokio"] }
dotenvy = "0.15.7"
hex = "0.4.3"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version="0.12.4", features = ["json"] }
serde = { version="1.0.201", features=["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.60"
tokio = { version="1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["add-extension", "cors"] }
tower-service = "0.3.2"
url = "2.5.0"
