[package]
name = "waka_discord_status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
hex = "0.4.3"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version="0.12.4", features = ["json"] }
serde = { version="1.0.201", features=["derive"] }
serde_json = "1.0.117"
tokio = { version="1.37.0", features = ["full"] }
url = "2.5.0"
